# BoredGameEngine

./: .clang-format  .gitignore  2DGameEngine.sln  2DGameEngine.vcxproj  2DGameEngine.vcxproj.filters  BGE2.sln  BoredEngine.sln  BoredEngine.vcxproj  BoredEngine.vcxproj.filters  CMakeLists.txt  CMakePresets.json  EngineConfig.h.in  LICENSE  README.md  build.ps1  compile_commands.json  implementatin.md  research.md  vcpkg.json
Editor/: CMakeLists.txt  MyScene.cpp  MyScene.hpp  main.cpp
Editor/Windows/: NodeWindow.hpp  SceneTree.hpp
Editor/src/: Editor.cpp  Editor.hpp  FileContent.cpp  FileContent.h  FileContent.hpp  FileExplorer.cpp  FileExplorer.h  FileExplorer.hpp  GameScreen.cpp  GameScreen.hpp  SubWindow.cpp  SubWindow.h  SubWindow.hpp  app.cpp  constants.h  window.h
Editor/src/Adapter/: api.h  windowAPI.cpp  windowAPI.h
Editor/src/GameManifest/: Loader.cpp  Loader.hpp  Manifest.hpp
Editor/src/SubWindow/: AssetManager.cpp  AssetManager.hpp  FileContent.cpp  FileContent.hpp  FileExplorer.cpp  FileExplorer.hpp  GameScreen.cpp  GameScreen.hpp  SubWindow.cpp  SubWindow.hpp
Editor/tests/: fileexplorer.cpp  gamescreen.cpp
Engine/: BoredEngine.vcxproj  BoredEngine.vcxproj.filters  CMakeLists.txt  EngineConfig.h.in  vcpkg.json
Engine/Components/: Camera.hpp  Component.hpp  FlatComponent.hpp  InputComponent.hpp  Lighting.hpp  Mesh3D.hpp  MeshComponent.hpp  TransformComponent.hpp  UpdateComponent.hpp
Engine/Scene/: Node.hpp  Scene.hpp
Engine/Services/: IOService.cpp  IOService.hpp
Engine/Systems/: I_System.hpp  Update.hpp
Engine/Systems/Input/: IOService.cpp  IOService.hpp  InputService.hpp  InputSystem.hpp
Engine/Systems/Networks/: NetworkClientService.cpp  NetworkClientService.hpp  NetworkServerService.cpp  NetworkServerService.hpp
Engine/Systems/Renderer/: I_Renderer.hpp
Engine/Systems/Renderer2D/: CPU_Renderer2D.cpp  CPU_Renderer2D.hpp  I_Renderer2D.hpp
Engine/Systems/Window/: WindowService.cpp  WindowService.hpp
Engine/Utils/: AssetManager.cpp  AssetManager.hpp  Font.cpp  Font.hpp
Engine/Utils/Networks/: ISocket.hpp  WindowsSocket.cpp  WindowsSocket.hpp
Engine/include/: ActorManager.hpp  Bored.hpp
Engine/res/3d_models/: cube.blend
Engine/res/shaders/: screen.frag  screen.vert
Engine/src/: Bored.cpp  GameLogic.cpp  GameLogic.hpp  GameLoop.cpp  GameLoop.h  GameLoop.hpp  GameStruct.hpp  IGame.cpp  IGame.h  Scene.cpp  Scene.hpp  System.h  config.h.in  pch.h
Engine/src/Actor/: Actor.cpp  Actor.h  BaseCamera.cpp  BaseCamera.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ShaderClass.h
Engine/src/Adapter/: Audio.cpp  Audio.h  FileSystem.cpp  FileSystem.h  GLFWWindow.cpp  GLFWWindow.h  OAL.cpp  OAL.h  OGL.cpp  OGL.h  Render.cpp  Render.h  STDFS.cpp  STDFS.h  Window.cpp  Window.h
Engine/src/Audio/: IAudio.cpp  IAudio.h  ISoundBuffer.h  ISource.h  OpenALAudio.cpp  OpenALAudio.h  OpenALBuffer.cpp  OpenALBuffer.h  OpenALSource.cpp  OpenALSource.h
Engine/src/Components/: AmbientLightComponent.h  AudioComponent.cpp  AudioComponent.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  DiffuseLightComponent.h  InputComponent.cpp  InputComponent.h  LightComponent.h  MeshComponent.cpp  MeshComponent.h  OrthoCameraComponent.cpp  OrthoCameraComponent.h  PerspectiveCameraComponent.cpp  PerspectiveCameraComponent.h  SpecularLightComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/src/DataAccess/: FileManager.cpp  FileManager.h  RenderManager.cpp  RenderManager.hpp
Engine/src/ECS/: Actor.hpp  ActorManager.cpp  ActorManager.hpp
Engine/src/Frontend/: Factory.spec.cpp  Input.cpp  Input.hpp  Mesh.spec.cpp  OGLMesh.cpp  OGLMesh.hpp  RenderUtil.cpp  RenderUtil.hpp  Renderer.cpp  Renderer.hpp  Texture.spec.cpp
Engine/src/GameMode/: IGameMode.cpp  IGameMode.h
Engine/src/HUD/: IHUD.cpp  IHUD.h  ImGuiHUD.cpp  ImGuiHUD.h
Engine/src/Input/: Constant.h  Context.cpp  Context.h  GLFWInput.cpp  GLFWInput.h  IInput.cpp  IInput.h  Input.cpp  Input.h
Engine/src/Renderer/: IRenderer.cpp  IRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  NullRenderer.cpp  NullRenderer.h  Renderer.cpp  Renderer.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Utils/: Helper.cpp  Helper.h  LinkedList.h  Locator.h  Render.cpp  Render.hpp
Engine/src/Window/: GLFWWindow.cpp  GLFWWindow.h  IWindow.cpp  IWindow.h
Engine/src/World/: IWorld.cpp  IWorld.h  World.cpp  World.h
docs/: CMakeLists.txt  Doxyfile.in
examples/Chess/: Bored.json  CMakeLists.txt
examples/Chess/src/: ChessLogic.cpp  ChessLogic.hpp  RenderUtilModule.cpp  RenderUtilModule.hpp  main.cpp
examples/Playground/: CMakeLists.txt  PlaygroundConfig.h.in
examples/Playground/src/: main.cpp
src/: CMakeLists.txt  IGame.cpp  IGame.h  System.h  main.cpp
src/Actor/: Actor.cpp  Actor.h  BaseCamera.cpp  Component.h
src/Camera/: Camera.cpp  Camera.hpp
src/Components/: CameraComponent.cpp  CameraComponent.h  Component.h  InputComponent.cpp  Mesh3D.hpp  MeshComponent.h  NodeComponent.hpp  TransformComponent.h
src/ECS/: Node.hpp  Scene.hpp
src/Input/: Constant.h  Context.cpp  Context.h  Input.cpp  Input.h
src/Nodes/: Camera.hpp  Lighting.hpp  Mesh3D.cpp  Mesh3D.hpp
src/Renderer/: I_Object.hpp  I_Renderer.hpp  I_Texture.hpp  IndexBuffer.h  Mesh.cpp  Renderer.cpp  Renderer.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Renderer/CPU/: RayTracer.cpp  RayTracer.hpp
src/Renderer/Camera/: Camera.hpp
src/Renderer/OGL/: Renderer.cpp  Renderer.hpp
src/Renderer/Shader/: Shader.cpp  Shader.hpp
src/Renderer/Texture/: OGL_Texture.hpp
src/Scene/: Node.hpp  Scene.hpp
src/Systems/: System.hpp
src/Systems/Renderer/: I_Object.hpp  (+1 more)
src/Utils/: Helper.cpp  Helper.h  Locator.h
src/Window/: Input.hpp  Listeners.hpp  Window.cpp  Window.h  Window.hpp
src/World/: World.cpp  World.h
tests/: CMakeLists.txt  Texture.spec.cpp  main.spec.cpp
(+342 files in other folders)
